update ExcelTool